apps/ana-phoenix/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ana-phoenix
  labels:
    pod-security.kubernetes.io/enforce: baseline
