apps/ana-phoenix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ana-phoenix
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  ingressClassName: nginx
  tls:
    - secretName: ana-phoenix-tls
      hosts:
        - ana-phoenix.192.168.105.200.nip.io
  rules:
    - host: ana-phoenix.192.168.105.200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
